# sikizana

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Dockerfile  README.md  ROADMAP.md  agent.yaml  agent_runtime.txt  conftest.py  deploy.sh  docker-compose.vps.yml  package.json  requirements.txt  ruff.toml
.github/workflows/: ci.yml
contracts/sikizana/: Cargo.toml
contracts/sikizana/src/: lib.rs  service.rs
data/: sample_bylaws.txt  sample_mpesa.csv
docs/: AP_INTEGRITY_DESIGN_PARTNERS.md  AP_INTEGRITY_PLAN.md  ARCHITECTURE.md  BRAND.md  BUSINESS_MODEL.md  COMPETITIVE_LANDSCAPE.md  DEMO_CHECKLIST.md  EXTERNAL_INTEGRATIONS.md  FRONTEND.md  PITCH_SCRIPT.md  QA_ANTICIPATION.md  SUPERMEMORY_DEMO.md  SUPERMEMORY_SUBMISSION.md  TEAM.md  VARA.md  XERO_APP_STORE_CHECKLIST.md  XERO_SUBMISSION.md  pitch-slides.html
infra/: deploy.sh
src/agents/: arbitrator.py  arbitrator_bak.py  bookkeeper.py
tests/: conftest.py  test_accounts.py  test_activity.py  test_agent_tools.py  test_ap_integrity.py  test_bookkeeper_helpers.py  test_cache.py  test_chase.py  test_connectors.py  test_crypto.py  test_data_protection.py  test_digest.py  test_findings.py  test_metric_snapshots.py  test_multilingual.py  test_oauth_state.py  test_parse_report.py  test_rate_limit.py  test_security_hardening.py  test_supermemory.py  test_tools_demo_mode.py  test_user_profile.py  test_webhook_signature.py  test_xero_api.py
venv_new/: pyvenv.cfg
web/: .gitignore  DESIGN.md  Dockerfile  components.json  package-lock.json  package.json  pnpm-lock.yaml
(+122 files in other folders)
