[package]
name = "sikizana-program"
version = "0.1.0"
edition = "2021"

[dependencies]
gstd = "1.7.0"
sails-rs = "0.7.0"
gmeta = "1.7.0"
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[dev-dependencies]
gtest = "1.7.0"
tokio = { version = "1", features = ["full"] }

[lib]
crate-type = ["cdylib", "rlib"]
